Use Android-compatible contract file reads